# AutoParking

./: CMakeLists.txt
BirdView/: CMakeLists.txt  config.yaml
BirdView/include/: BirdView.h
BirdView/src/: BirdView.cpp
Detection/: CMakeLists.txt
Detection/model/: labelmap_voc.prototxt  no_bn.mapping  no_bn.prototxt  no_bn.xml
PackingLine/: CMakeLists.txt
Script/: CMakeLists.txt  H0.xml  calibration.cpp  perspectivetomap.cpp  test.txt
test/: BirdView.cpp  CMakeLists.txt  config.yaml  main.cpp
